# Learnova-AI-An-AI---based-LMS

./: .gitignore  CODEMAP.md  PROJECT_OVERVIEW.md  README.md  app.py  repo-files.txt
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: database.py
backend/app/flashcards/: __init__.py  service.py
backend/app/ingestion/: pipeline.py
backend/app/mcq/: generator.py  stats.py
backend/app/models/: db_models.py
backend/app/rag/: rag.py
backend/app/services/: embeddings.py  ollama.py  qdrant.py  reranker.py
backend/app/summaries/: summarize.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/browse/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/courses/: page.tsx
frontend/app/courses/[id]/: page.tsx
frontend/app/courses/[id]/flashcards/: page.tsx
frontend/app/flashcards/: page.tsx
frontend/app/login/: page.tsx
frontend/app/mcq/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: FlipCard.tsx  KebabMenu.tsx  Skeleton.tsx  Spinner.tsx  Toaster.tsx
frontend/lib/: api.ts
infra/: .env.example  compose.yaml
